template with boostrap

--- a/appstatico/templates/appstatico/busqueda.html
+++ b/appstatico/templates/appstatico/busqueda.html
@@ -1,9 +1,43 @@
-<form method="GET">
-    <div class="input-group">
-        <input type="text" name="buscar" value="{{request.GET.buscar}}" >
-        <button type="submit" >Buscar</button>
-    </div>
-</form>
 
 
-{{demanda}}
+
+{% extends 'appstatico/base.html' %}
+
+{% block content %}
+
+<div class="container">
+    <h2>Busqueda de Demandas</h2>
+	<form method="GET">
+        <div class="input-group">
+            <input type="text" class="form-control" name="buscar" value="{{request.GET.buscar}}" >
+            <button type="submit" class='btn' >Buscar</button>
+        </div>
+    </form>
+    
+    
+    {% for d in demanda %}
+    {{d.id_demanda}}
+    {% endfor %}
+    
+	<table class="table table-dark">
+		<thead>
+		  <tr>
+			<th scope="col">#</th>
+			<th scope="col">First</th>
+			<th scope="col">Last</th>
+			<th scope="col">Accion</th>
+		  </tr>
+		</thead>
+		<tbody>
+			{% for d in demanda %}
+		  <tr>
+			<th scope="row">1</th>
+			<td>{{d.id_demanda}}</td>
+			<td>{{d.fecha}}</td>
+ 		  </tr>
+		  {% endfor %}
+		</tbody>
+	  </table>
+	
+</div>
+{% endblock %}
