--- a/appstatico/templates/appstatico/sidebar-right.html
+++ b/appstatico/templates/appstatico/sidebar-right.html
@@ -48,7 +48,7 @@
 						</ul>
 					</li>
 					<li><a href="contact.html">Contact</a></li>
-					<li><a class="btn" href="signin.html">INICIAR SESIÓN / REGISTRARSE</a></li>
+					<li><a class="btn" href="{% url 'login' %}">INICIAR SESIÓN / REGISTRARSE</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
