--- a/appstatico/templates/appstatico/index.html
+++ b/appstatico/templates/appstatico/index.html
@@ -48,7 +48,7 @@
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Demandas <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li class="active"><a href="{% url 'sidebarleft' %}">Crear Demanda</a></li>
+							<li class="active"><a href="{% url 'creardemanda' %}">Crear Demanda</a></li>
 
 							<li class="active"><a href="{% url 'busqueda' %}">Buscar Demandas</a></li>
 
