--- a/appstatico/templates/appstatico/sidebar-left.html
+++ b/appstatico/templates/appstatico/sidebar-left.html
@@ -47,11 +47,12 @@
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Demandas <b class="caret"></b></a>
 						<ul class="dropdown-menu">
 
-							<li class="active"><a href="sidebar-left.html">Crear Demanda</a></li>
+							<li class="active"><a href="{% url 'creardemanda' %}">Crear Demanda</a></li>
 
-							<li class="active"><a href="sidebar-left.html">Buscar Demandas</a></li>
+							<li class="active"><a href="{% url 'busqueda' %}">Buscar Demandas</a></li>
 
-							<li class="active"><a href="sidebar-left.html">Eliminar Demanda</a></li>
+							<li class="active"><a href="{% url 'eliminardemanda' %}">Eliminar Demanda</a></li>
+						
 						
 						</ul>
 					</li>
