--- a/appstatico/templates/appstatico/signin.html
+++ b/appstatico/templates/appstatico/signin.html
@@ -42,17 +42,17 @@
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Demandas <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li class="active"><a href="sidebar-left.html">Crear Demanda</a></li>
+							<li class="active"><a href="{% url 'creardemanda' %}">Crear Demanda</a></li>
 
-							<li class="active"><a href="sidebar-left.html">Buscar Demandas</a></li>
+							<li class="active"><a href="{% url 'busqueda' %}">Buscar Demandas</a></li>
 
-							<li class="active"><a href="sidebar-left.html">Eliminar Demanda</a></li>
+							<li class="active"><a href="{% url 'eliminardemanda' %}">Eliminar Demanda</a></li>
 							
 						
 						</ul>
 					</li>
 					<li><a href="contact.html">Seguimiento de Casos</a></li>
-					<li class="active"><a class="btn" href="signin.html">INICIAR SESIÓN / REGISTRARSE</a></li>
+					<li class="active"><a class="btn" href="{% url 'login' %}">INICIAR SESIÓN / REGISTRARSE</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
