first commit to conizita

--- a/appstatico/templates/appstatico/base.html
+++ b/appstatico/templates/appstatico/base.html
@@ -14,7 +14,7 @@
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <!-- Brand -->
-  <a class="navbar-brand" href="#">Logo</a>
+  <a class="navbar-brand" href="#">LegalTech</a>
 
   <!-- Links -->
   <ul class="navbar-nav">
