--- a/appstatico/templates/appstatico/busqueda.html
+++ b/appstatico/templates/appstatico/busqueda.html
@@ -15,17 +15,15 @@
     </form>
     
     
-    {% for d in demanda %}
-    {{d.id_demanda}}
-    {% endfor %}
+
     
 	<table class="table table-dark">
 		<thead>
 		  <tr>
 			<th scope="col">#</th>
-			<th scope="col">First</th>
-			<th scope="col">Last</th>
-			<th scope="col">Accion</th>
+			<th scope="col">Id</th>
+			<th scope="col">Fecha</th>
+			<th scope="col">Tipo</th>
 		  </tr>
 		</thead>
 		<tbody>
@@ -34,6 +32,7 @@
 			<th scope="row">1</th>
 			<td>{{d.id_demanda}}</td>
 			<td>{{d.fecha}}</td>
+            <td>{{d.tipodemanda}}</td>
  		  </tr>
 		  {% endfor %}
 		</tbody>
