--- a/appstatico/templates/appstatico/inicio.html
+++ b/appstatico/templates/appstatico/inicio.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container">
 
-	<h2>Menu Principal</h2>
+	<h2>Bienvenidos a LegalTech</h2>
 	
     {% if user.is_authenticated %}
     Hola {{ user.username }}!
