--- a/appstatico/templates/appstatico/modificar.html
+++ b/appstatico/templates/appstatico/modificar.html
@@ -14,145 +14,240 @@
         </div>
         
         
-        <div class="Contenedor_first">
+        <div class="Contenedor_first" style="display: flex; position: relative;
+         border: 2px solid #000; margin: auto;
+         width: 900px;
+         height: 500px;
+          margin-bottom: 50px;">
 
-            <div class="inter_first_left"> 
-
-                <label>Datos de la Demanda</label>
-
-            <h5> id de la demanda </h5>
-            {{formulario.id_demanda}}
-            <h5> Fecha </h5>
-            {{formulario.fecha}}
-            <h5> author </h5>
-            {{formulario.author}}
-            <h5> Hora </h5>
-            {{formulario.hora}}
-            <h5> tipo de demanda </h5>
-            {{formulario.tipodemanda}}
+                <div class="inter_first_left" style="display: block;
+                position: relative;
             
+             height: 400px;
+             width: 250px;
+            margin: 20px;
+            padding: 10px;"> 
 
-         </div>
+                    <label>Datos de la Demanda</label>
 
-            <div class="Text_area_right"> 
-                <h4> Detalle de la Demanda : </h4>
-                {{formulario.detalle}}
-            </div>
+                <h5> id de la demanda </h5>
+                {{formulario.id_demanda}}
+                <h5> Fecha </h5>
+                {{formulario.fecha}}
+                <h5> author </h5>
+                {{formulario.author}}
+                <h5> Hora </h5>
+                {{formulario.hora}}
+                <h5> tipo de demanda </h5>
+                {{formulario.tipodemanda}}
+                
 
-            </div>
-            
+             </div>
+
+                <div class="Text_area_right" style="display: block;
+                position: relative; height: 300px;
+ width: 500px;
+ margin: auto;
+ margin-top: 70px;"> 
+                    <h4> Detalle de la Demanda : </h4>
+                    {{formulario.detalle}}
+                </div>
+
+                </div>
+                
 
 
 
-            <h3> Demandado</h3>
+                <h3> Demandado</h3>
 
-            <div class="contenedor_second">
-                <div class="labelss">
+                <div class="contenedor_second" style="display: block;
+                position: relative;
+                
+                
+                   border: 2px solid #000;
+                   height: 100px;
+                   width: 950px;
+                    margin: auto;
+                    margin-bottom: 20px;
+                     border-radius: 5px;">
+                    <div class="labelss" style="display: flex;
+                    position: absolute;
+                    
+                    width: 800px;
+                    height: 50px;">
 
-                     <div>
-                         <h5 class="separate" >Rut</h5>
-                         {{formulario.rut_demandado}}								 	
-                         
-                     </div>
-                     
-                      <div> 
-                         <h5> </h5>
-
-                         {{formulario.dv_demandado}}
-                    </div>
-
-                         <div> 
-                     <h5 class="separate" >Nombre</h5>
-                     {{formulario.nombre_demandado}}								 
+                         <div>
+                             <h5 class="separate" style="margin-left: 10px;" >Rut</h5>
+                             {{formulario.rut_demandado}}								 	
+                             
                          </div>
-                       
+                         
+                          <div> 
+                             <h5> </h5>
 
-                     <div>
-                         <h5 class="separate">Apellido</h5>
-                         {{formulario.apellido_demandado}}
-                     </div>
+                             {{formulario.dv_demandado}}
+                        </div>
 
-                     <div>
-                         <h5 class="separate">Telefono</h5>
-                         {{formulario.telefono_demandado}}								 </div>
+                             <div> 
+                         <h5 class="separate" style="margin-left: 10px;">Nombre</h5>
+                         {{formulario.nombre_demandado}}								 
+                             </div>
+                           
+
+                         <div>
+                             <h5 class="separate" style="margin-left: 10px;">Apellido</h5>
+                             {{formulario.apellido_demandado}}
+                         </div>
+
+                         
 
                     
-                <div> 
-                    <h5 class="separate">Comuna</h5>
-                    {{formulario.comuna_demandado}}
-
-                </div>
-
-                
-                
-                
-                
-                 </div>
-
-
-
-
-
-                </div>
-
-
-                <h3> Demandante</h3>
-
-
-                 <div class="contenedor_second">
-                <div class="labelss">
-
-                     <div>
-                         <h5 class="separate" >Rut</h5>
-                         {{formulario.rut_demandante}}								 	
-                         
+                    
+                    
+                    
                      </div>
-                     <div> 
-                         <h5> </h5>
 
-                         {{formulario.dv_demandante}}	
+
+
+
+
                     </div>
 
-                         <div> 
-                     <h5 class="separate" >Nombre</h5>
-                     {{formulario.nombre_demandante}}									 
-                         </div>
-                       
+                    <div class="contenedor_second" style="display: block;
+                    position: relative;
+                    
+                    
+                       border: 2px solid #000;
+                       height: 100px;
+                       width: 950px;
+                        margin: auto;
+                        margin-bottom: 20px;
+                         border-radius: 5px;">
+                   <div class="labelss" style="
+                   display: flex;
+                   position: absolute;
+                   
+                   width: 800px;
+                   height: 50px;">
 
-                     <div>
-                         <h5 class="separate">Apellido</h5>
-                         {{formulario.apellido_demandante}}	
+                        
+
+                        
+                   
+                        <div>
+                           <h5 class="separate" style="margin-left: 10px;margin-right : 10px;">Telefono</h5>
+                           {{formulario.telefono_demandado}}									 </div>
+   
+                       <div> 
+                      <h5 class="separate" style="margin-left: 10px;">Comuna</h5>
+                      {{formulario.comuna_demandado}}	
+   
+                      </div>
+                   
+                    </div>
+
+
+
+                    
+
+                   </div>
+                    <h3> Demandante</h3>
+
+
+                     <div class="contenedor_second" style="display: block;
+                     position: relative;
+                     
+                     
+                        border: 2px solid #000;
+                        height: 100px;
+                        width: 950px;
+                         margin: auto;
+                         margin-bottom: 20px;
+                          border-radius: 5px;">
+                    <div class="labelss" style="
+                    display: flex;
+                    position: absolute;
+                    
+                    width: 800px;
+                    height: 50px;">
+
+                         <div>
+                             <h5 class="separate" style="margin-left: 10px;" >Rut</h5>
+                             {{formulario.rut_demandante}}								 	
+                             
+                         </div>
+                         <div> 
+                             <h5> </h5>
+
+                             {{formulario.dv_demandante}}	
+                        </div>
+
+                             <div> 
+                         <h5 class="separate" style="margin-left: 10px;">Nombre</h5>
+                         {{formulario.nombre_demandante}}									 
+                             </div>
+                           
+
+                         <div>
+                             <h5 class="separate" style="margin-left: 10px;">Apellido</h5>
+                             {{formulario.apellido_demandante}}	
+                         </div>
+
+                         
+                    
+                         <div>
+                         </div>
+    
+                        <div> 
+                       	
+    
+                       </div>
+                    
                      </div>
 
-                     <div>
-                         <h5 class="separate">Telefono</h5>
-                         {{formulario.telefono_demandante}}									 </div>
-
-                     <div> 
-                    <h5 class="separate">Comuna</h5>
-                    {{formulario.comuna_demandante}}	
-
-                </div>
-                
-                
-                
-                 </div>
 
 
+                     
+
+                    </div>
+                    <div class="contenedor_second" style="display: block;
+                    position: relative;
+                    
+                    
+                       border: 2px solid #000;
+                       height: 100px;
+                       width: 950px;
+                        margin: auto;
+                        margin-bottom: 20px;
+                         border-radius: 5px;">
+                   <div class="labelss" style="
+                   display: flex;
+                   position: absolute;
+                   
+                   width: 800px;
+                   height: 50px;">
+
+                        
+
+                        
+                   
+                        <div>
+                           <h5 class="separate" style="margin-left: 10px;margin-right : 10px;">Telefono</h5>
+                           {{formulario.telefono_demandante}}									 </div>
+   
+                       <div> 
+                      <h5 class="separate" style="margin-left: 10px;">Comuna</h5>
+                      {{formulario.comuna_demandante}}	
+   
+                      </div>
+                   
+                    </div>
 
 
 
-                </div>
+                    
 
-
-                
-
-            
-            
-
-
-    
-        </div>
+                   </div>
         <div class="Botonera"> 						
             
         </div>
