--- a/appstatico/templates/appstatico/base.html
+++ b/appstatico/templates/appstatico/base.html
@@ -26,6 +26,7 @@
     </li>
 
     <!-- Dropdown -->
+    {% if user.is_authenticated %}
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
         Demandas
@@ -37,6 +38,7 @@
         <a class="dropdown-item" href="{% url 'crud' %}">Modificar Demanda</a>
     </div>
     </li>
+    {% endif %}
     {% if user.is_authenticated %}
     <li class="nav-item">
         <a class="nav-link" href="{% url 'logout' %}">Logout</a>
