--- a/appstatico/templates/appstatico/creardemanda.html
+++ b/appstatico/templates/appstatico/creardemanda.html
@@ -3,163 +3,276 @@
 {% extends 'appstatico/base.html' %}
 
 {% block content %}
+
+
 <div class="container">
 
-	
-	
-	<form method="POST">
-        {% csrf_token %}
-        <div class="Contenedor_principal">
-        <div class="tittle_bar"> 
-        <h4 > Crear nueva Demanda</h4>
-        
-        </div>
-        
-        
-        <div class="Contenedor_first">
-
-            <div class="inter_first_left"> 
-
-                <label>Datos de la Demanda</label>
-
-            <h5> id de la demanda </h5>
-            {{demanda.id_demanda}}
-            <h5> Fecha </h5>
-            {{demanda.fecha}}
-            <h5> author </h5>
-            {{demanda.author}}
-            <h5> Hora </h5>
-            {{demanda.hora}}
-            <h5> tipo de demanda </h5>
-            {{demanda.tipodemanda}}
+	<article class="col-md-8 maincontent">
+        <header class="page-header">
+            <h1 class="page-title">Sistema de registro de demandas.</h1>
+        </header>
+        <form method="POST">
+            {% csrf_token %}
+            <div class="Contenedor_principal" style="display: block;
+            position: relative; border: 2px solid black; border-radius: 5px;
+             width: 1000px; height: 1200px;">
+            <div class="tittle_bar" style="border-bottom: 2px solid #000; margin-bottom: 10px;"> 
+            <h4 > Crear nueva Demanda</h4>
             
-
-         </div>
-
-            <div class="Text_area_right"> 
-                <h4> Detalle de la Demanda : </h4>
-                {{demanda.detalle}}
-            </div>
-
             </div>
             
+            
+            <div class="Contenedor_first" style="display: flex; position: relative;
+         border: 2px solid #000; margin: auto;
+         width: 900px;
+         height: 500px;
+          margin-bottom: 50px;">
+
+                <div class="inter_first_left" style="display: block;
+                position: relative;
+            
+             height: 400px;
+             width: 250px;
+            margin: 20px;
+            padding: 10px;"> 
+
+                    <label>Datos de la Demanda</label>
+
+                <h5> id de la demanda </h5>
+                {{demanda.id_demanda}}
+                <h5> Fecha </h5>
+                {{demanda.fecha}}
+    
+                <h5> Hora </h5>
+                {{demanda.hora}}
+                <h5> tipo de demanda </h5>
+                {{demanda.tipodemanda}}
+                
+
+             </div>
+
+                <div class="Text_area_right" style="display: block;
+                position: relative; height: 300px;
+ width: 500px;
+ margin: auto;
+ margin-top: 70px;"> 
+                    <h4> Detalle de la Demanda : </h4>
+                    {{demanda.detalle}}
+                </div>
+
+                </div>
+                
 
 
 
-            <h3> Demandado</h3>
+                <h3> Demandado</h3>
 
-            <div class="contenedor_second">
-                <div class="labelss">
+                <div class="contenedor_second" style="display: block;
+                position: relative;
+                
+                
+                   border: 2px solid #000;
+                   height: 100px;
+                   width: 950px;
+                    margin: auto;
+                    margin-bottom: 20px;
+                     border-radius: 5px;">
+                    <div class="labelss" style="display: flex;
+                    position: absolute;
+                    
+                    width: 800px;
+                    height: 50px;">
 
-                     <div>
-                         <h5 class="separate" >Rut</h5>
-                         {{demanda.rut_demandado}}								 	
-                         
-                     </div>
-                     
-                      <div> 
-                         <h5> </h5>
-
-                         {{demanda.dv_demandado}}
-                    </div>
-
-                         <div> 
-                     <h5 class="separate" >Nombre</h5>
-                     {{demanda.nombre_demandado}}								 
+                         <div>
+                             <h5 class="separate" style="margin-left: 10px;" >Rut</h5>
+                             {{demanda.rut_demandado}}								 	
+                             
                          </div>
-                       
+                         
+                          <div> 
+                             <h5> </h5>
 
-                     <div>
-                         <h5 class="separate">Apellido</h5>
-                         {{demanda.apellido_demandado}}
-                     </div>
+                             {{demanda.dv_demandado}}
+                        </div>
 
-                     <div>
-                         <h5 class="separate">Telefono</h5>
-                         {{demanda.telefono_demandado}}								 </div>
+                             <div> 
+                         <h5 class="separate" style="margin-left: 10px;">Nombre</h5>
+                         {{demanda.nombre_demandado}}								 
+                             </div>
+                           
+
+                         <div>
+                             <h5 class="separate" style="margin-left: 10px;">Apellido</h5>
+                             {{demanda.apellido_demandado}}
+                         </div>
+
+                         
 
                     
-                <div> 
-                    <h5 class="separate">Comuna</h5>
-                    {{demanda.comuna_demandado}}
-
-                </div>
-
-                
-                
-                
-                
-                 </div>
-
-
-
-
-
-                </div>
-
-
-                <h3> Demandante</h3>
-
-
-                 <div class="contenedor_second">
-                <div class="labelss">
-
-                     <div>
-                         <h5 class="separate" >Rut</h5>
-                         {{demanda.rut_demandante}}								 	
-                         
+                    
+                    
+                    
                      </div>
-                     <div> 
-                         <h5> </h5>
 
-                         {{demanda.dv_demandante}}	
+
+
+
+
                     </div>
 
-                         <div> 
-                     <h5 class="separate" >Nombre</h5>
-                     {{demanda.nombre_demandante}}									 
-                         </div>
-                       
+                    <div class="contenedor_second" style="display: block;
+                    position: relative;
+                    
+                    
+                       border: 2px solid #000;
+                       height: 100px;
+                       width: 950px;
+                        margin: auto;
+                        margin-bottom: 20px;
+                         border-radius: 5px;">
+                   <div class="labelss" style="
+                   display: flex;
+                   position: absolute;
+                   
+                   width: 800px;
+                   height: 50px;">
 
-                     <div>
-                         <h5 class="separate">Apellido</h5>
-                         {{demanda.apellido_demandante}}	
+                        
+
+                        
+                   
+                        <div>
+                           <h5 class="separate" style="margin-left: 10px;margin-right : 10px;">Telefono</h5>
+                           {{demanda.telefono_demandado}}									 </div>
+   
+                       <div> 
+                      <h5 class="separate" style="margin-left: 10px;">Comuna</h5>
+                      {{demanda.comuna_demandado}}	
+   
+                      </div>
+                   
+                    </div>
+
+
+
+                    
+
+                   </div>
+                    <h3> Demandante</h3>
+
+
+                     <div class="contenedor_second" style="display: block;
+                     position: relative;
+                     
+                     
+                        border: 2px solid #000;
+                        height: 100px;
+                        width: 950px;
+                         margin: auto;
+                         margin-bottom: 20px;
+                          border-radius: 5px;">
+                    <div class="labelss" style="
+                    display: flex;
+                    position: absolute;
+                    
+                    width: 800px;
+                    height: 50px;">
+
+                         <div>
+                             <h5 class="separate" style="margin-left: 10px;" >Rut</h5>
+                             {{demanda.rut_demandante}}								 	
+                             
+                         </div>
+                         <div> 
+                             <h5> </h5>
+
+                             {{demanda.dv_demandante}}	
+                        </div>
+
+                             <div> 
+                         <h5 class="separate" style="margin-left: 10px;">Nombre</h5>
+                         {{demanda.nombre_demandante}}									 
+                             </div>
+                           
+
+                         <div>
+                             <h5 class="separate" style="margin-left: 10px;">Apellido</h5>
+                             {{demanda.apellido_demandante}}	
+                         </div>
+
+                         
+                    
+                         <div>
+                         </div>
+    
+                        <div> 
+                       	
+    
+                       </div>
+                    
                      </div>
 
-                     <div>
-                         <h5 class="separate">Telefono</h5>
-                         {{demanda.telefono_demandante}}									 </div>
 
-                     <div> 
-                    <h5 class="separate">Comuna</h5>
-                    {{demanda.comuna_demandante}}	
 
-                </div>
+                     
+
+                    </div>
+                    <div class="contenedor_second" style="display: block;
+                    position: relative;
+                    
+                    
+                       border: 2px solid #000;
+                       height: 100px;
+                       width: 950px;
+                        margin: auto;
+                        margin-bottom: 20px;
+                         border-radius: 5px;">
+                   <div class="labelss" style="
+                   display: flex;
+                   position: absolute;
+                   
+                   width: 800px;
+                   height: 50px;">
+
+                        
+
+                        
+                   
+                        <div>
+                           <h5 class="separate" style="margin-left: 10px;margin-right : 10px;">Telefono</h5>
+                           {{demanda.telefono_demandante}}									 </div>
+   
+                       <div> 
+                      <h5 class="separate" style="margin-left: 10px;">Comuna</h5>
+                      {{demanda.comuna_demandante}}	
+   
+                      </div>
+                   
+                    </div>
+
+
+
+                    
+
+                   </div>
+
+                    
+
                 
                 
+
+
+                    <button type='submit' class="btn btn-secondary">Crear</button>
+            </div>
+            <div class="Botonera"> 						
                 
-                 </div>
-
-
-
-
-
-                </div>
-
-
-                
-
+            </div>
             
-            
+        </form>
 
-
-    
-        </div>
-        <div class="Botonera"> 						
-            
-        </div>
-        <button type='submit'>Crear</button>
-    </form>
+    </article>
+	
+	
 	
 </div>
 {% endblock %}
