--- a/appstatico/templates/appstatico/crud.html
+++ b/appstatico/templates/appstatico/crud.html
@@ -19,7 +19,7 @@
 		<tbody>
 			{% for d in demanda %}
 		  <tr>
-			<th scope="row">1</th>
+			<th scope="row">{{d.id}}</th>
 			<td>{{d.id_demanda}}</td>
 			<td>{{d.fecha}}</td>
 			<td>
