--- a/appstatico/templates/appstatico/modificar.html
+++ b/appstatico/templates/appstatico/modificar.html
@@ -248,10 +248,11 @@
                     
 
                    </div>
-        <div class="Botonera"> 						
-            
-        </div>
-        <button type='submit'>Modificar</button>
+                   <div class="container d-flex justify-content-center mb-3">
+                    <a class="btn btn-success"> Modificar</a>
+                   </div>
+        
+        
     </form>
 	
 </div>
